--- a/hw1.html
+++ b/hw1.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>PHP 學習站台列表</h1>
-    <p>推薦清單<br>
+    <p style="color: brown;">推薦清單<br>
         <a href="https://php.onlinedoc.tw/">PHP 無限</a><br>
         <img src="./胡桃.jpg" width="700" height="400" alt="pic for 64">
 </body>
