--- a/hw1.html
+++ b/hw1.html
@@ -6,10 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: rgb(12, 248, 236);">
     <h1>PHP 學習站台列表</h1>
     <p style="color: brown;">推薦清單<br>
         <a href="https://php.onlinedoc.tw/">PHP 無限</a><br>
         <img src="./胡桃.jpg" width="700" height="400" alt="pic for 64">
+
+    </p>
+    <h1 style="font-size:60px;">Heading 1</h1>
+    <h2>Heading 2</h2>
+    <h3>Heading 3</h3>
+    <h4>Heading 4</h4>
+    <h5>Heading 5</h5>
+    <h6>Heading 6</h6>
+
+    <p>
+        <p style="color:red;">
+        This paragraph<br>
+        contains a lot of lines<br>
+        in the source code,<br>
+        but the browser<br>
+        ignores it.<br>
+        </p>
+        <hr>
+        <pre>
+        <pre style="color:red; text-align: center;">
+        This paragraph
+        contains a lot of spaces
+        in the source code,
+        but the browser
+        ignores it.
+        </pre>
 </body>
 </html>
