--- a/homework0319/mypage.html
+++ b/homework0319/mypage.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Policy</title>
+    <title>TWICE</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="color1.css">
 </head>
-<body>
-    <h1>LiAnn</h1>
+<body background="./TWICE2.jpg" style="background-repeat: no-repeat;background-size: cover;">
+    <h1>TWICE</h1>
     <hr>
-    <a href="">介绍自己</a>
+    <a href="./TT.html">关于TWICE的介绍</a>
+
 </body>
 </html>
